--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Our Products</h2>
         <div class="products">
             <div class="product">
-                <img src="igitalplanner.jpeg">
+                <img src="digitalplanner.jpeg">
                 <h3>Digital Planners</h3>
                 <p>Organize your life with our beautifully designed digital planners.</p> 
             </div>
