--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img class="avatar" src="logo.png" alt="Logo">
     </div>
     <div class="banner">
+        <img src="backgroup.jpeg" alt="Background">
         <h1>Digital Stationary</h1>
         <h2>Stay Ahead, Stay Organized.</h2>
     </div>
@@ -27,7 +28,7 @@
         <h2>Our Products</h2>
         <div class="products">
             <div class="product">
-                <img src="digitalplanner.jpeg">
+                <img src="digitalplanner.jpeg" alt="Digital Planner">
                 <h3>Digital Planners</h3>
                 <p>Organize your life with our beautifully designed digital planners.</p> 
             </div>
