--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="avatar" src="logo.png" alt="Logo">
     </div>
     <div class="banner">
-        <img src="backgroup.jpeg" alt="Background">
+        <img src="background.jpeg" alt="Background">
         <h1>Digital Stationary</h1>
         <h2>Stay Ahead, Stay Organized.</h2>
     </div>
