--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
         </div>
       
     </div>
+
+
+<div class="products">
+    <div class="product"></div>
+    <div class="product"></div>
+    <div class="product"></div>
+    <div class="product"></div>
+</div>
+    
 <a href="https://form.typeform.com/to/fz5AtH63" data-tf-popup="01JN5Y89H3NM6KBSSZYADGGW7R" class="btn-blue">Take the Quiz</a>
 
 <script src="https://form.typeform.com/to/fz5AtH63"></script>
