--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
         </p>
 
         <h2>Our Products</h2>
-        <div class="products">
-            <div class="product">
+        <div class="product-container">
+            <div class="product-card">
                 <img src="digitalplanner.jpeg" alt="Digital Planner">
                 <h3>Digital Planners</h3>
                 <p>Organize your life with our beautifully designed digital planners.</p> 
             </div>
 
-            <div class="product">
+            <div class="product-card">
                 <img src="mealplanning.jpeg" alt="Meal Planning">
                 <h3>Meal Planners</h3>
                 <p>Stay healthy and organized with our customizable meal planners.</p>
             </div>
 
-            <div class="product">
+            <div class="product-card">
                 <img src="stationary.jpeg" alt="Stationary">
                 <h3>Stationery Templates</h3>
                 <p>Explore our unique stationery templates for all your creative needs.</p>
